Fixed horizontal scroll, added dropdown to calculate

--- a/src/css/calculator.less
+++ b/src/css/calculator.less
@@ -48,6 +48,7 @@ html, body, #root { height: 100%; width: 100%; margin: 0; }
     margin-top: 20px;
     width: 790px;
     border: 1px solid black;
+    overflow-x: hidden;
 }
 
 /* Options Input Boxes, Switch, and Labels */
